--- a/ProjetoMVCCusoNelio/Views/Sellers/Index.cshtml
+++ b/ProjetoMVCCusoNelio/Views/Sellers/Index.cshtml
@@ -10,6 +10,10 @@
 
 <h2> @ViewData["Title"] </h2>
 
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create new</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="table-primary">
@@ -45,9 +49,9 @@
                     @Html.DisplayFor(modelItem => item.BaseSalary)
                 </td>
                 <td>
-                    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.Id"> Edit </a> 
-                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id"> Details </a>
-                    <a class="btn btn-primary" asp-action="Delete" asp-route-id="@item.Id"> Delete </a>
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id"> 🖋️ </a> 
+                    <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.Id"> 🔍 </a>
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id"> 🗑️ </a>
                 </td>
             </tr>
         }
