--- a/ProjetoMVCCusoNelio/Views/Shared/_Layout.cshtml
+++ b/ProjetoMVCCusoNelio/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="margin:-50px">
         <div class="container">
             &copy; 2022 - ProjetoMVCCusoNelio - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
