--- a/ProjetoMVCCusoNelio/Views/Shared/_Layout.cshtml
+++ b/ProjetoMVCCusoNelio/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <a class="nav-link" asp-area="" asp-controller="Sellers" asp-action="Index">Sellers</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="SalesRecords" asp-action="Index">Seles</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
                     </li>
                     <li class="nav-item">
